2020-17

* pulled data
* some reorganization of data folders
* add BC tests

2020-16

* README + CHANGELOG
* remove old population dataset
* add StatsCan population + age cohorts
* add premier, CMO and COVID websites
* add testing (ON)
* expanding testing (ON)

2020-15

* Initial version
* deaths / recoveries / cases
* doctors
* ICU
* population
* spending