@@ -1,0 +1,12 @@
+merged data - this is the primary dataset.
+Things are broken out by country, except
+for Canada, US and Australia, which are by
+state/province.
+
+At the moment this dataset is primarily 
+Canada focused, but all the names of everything
+else are nicely normalized at least.
+
+run `cook.js` to merge
+
+merged datasets are specified in `cook.yaml`
