@@ -3,6 +3,7 @@
 * pulled data
 * some reorganization of data folders
 * add BC tests
+* add data/cooked/cook.yaml to make datasets soft
 
 2020-16
 
